--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 <body>
     <!-- titolo+meriti  -->
     <header id="pattern">
+    <div class="contain">
         <img class="title" src="./immagini/download (1).png" alt="">
+    </div>
         
     </header>
+    <main class="contain">
     <h1 style="margin-bottom: 0;">Internet deve essere al servizio del "bene pubblico": il <br>manifesto di Tim Berners-Lee</h1>
     <h3 class="meriti">scritto da <strong style="color: rgb(24, 118, 248);">the booleaner</strong><br>il 10/10/2020</h3>
 
@@ -64,6 +67,7 @@
                             eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</th>
                     </tr>
                 </tbody>
+            </main>
             </table>
                 <!-- fine tabella  -->
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim <br>
