--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
     <!-- descrizione foto -->
     <h6 style="margin-top: 0;">1st Photoc John S. and James L. Knight Foundation, by Scott Henrichsen <br>
             2nd Photo: Wikimedia, by Paul Clarke</h6>
-            <!-- inizio paragrafo -->
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim <br>ad minim veniam, quis nostrud <mark>tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</mark> Duis autem vel eum iriure dolor in hendrerit in <br>vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum <br>zzril delenit augue duis dolore te feugait nulla facilisi.</p>
             <!-- unordered list -->
-            <ul>
+            <ul style="padding-inline-start: 0;">
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim <br>ad minim veniam, quis nostrud <mark>tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</mark> Duis autem vel eum iriure dolor in hendrerit in <br>vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum <br>zzril delenit augue duis dolore te feugait nulla facilisi.</p>
                 <li>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</li>
                 <li>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</li>
                 <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</li>
